# dde-calendar

./: .gitignore  CMakeLists.txt  linglong.yaml
.reuse/: dep5
arm64/: linglong.yaml
calendar-client/: CMakeLists.txt
calendar-client/assets/: dde-calendar.desktop
calendar-client/assets/configs/: org.deepin.dde-calendar.json
calendar-client/assets/dbus/: com.deepin.Calendar.xml
calendar-client/assets/dde-calendar/calendar/en_US/: calendar.md
calendar-client/assets/dde-calendar/calendar/zh_CN/: calendar.md
calendar-client/assets/dde-calendar/calendar/zh_HK/: calendar.md
calendar-client/assets/dde-calendar/calendar/zh_TW/: calendar.md
calendar-client/src/: calendarglobalenv.cpp  configsettings.cpp  main.cpp  shortcut.cpp  tabletconfig.cpp
calendar-client/src/KeyPress/: calldaykeyleftdeal.cpp  calldaykeyrightdeal.cpp  ckeydowndeal.cpp  ckeyenabledeal.cpp  ckeyleftdeal.cpp  ckeypressdealbase.cpp  ckeypressprxy.cpp  ckeyrightdeal.cpp  ckeyupdeal.cpp  cscenetabkeydeal.cpp  cweekdayscenetabkeydeal.cpp
calendar-client/src/customWidget/: animationstackedwidget.cpp  cbuttonbox.cpp  ccustomtimeedit.cpp  cdateedit.cpp  cdialogiconbutton.cpp  cdynamicicon.cpp  colorseletorwidget.cpp  colorseletorwidget.h  cpushbutton.cpp  cradiobutton.cpp  ctimelineedit.cpp  ctitlewidget.cpp  customframe.cpp  cweekwidget.cpp  jobtypecombobox.cpp  jobtypelistview.cpp  labelwidget.cpp  lunarcalendarwidget.cpp  monthbrefwidget.cpp  scheduleRemindWidget.cpp  scheduleview.cpp  timeedit.cpp  todaybutton.cpp
calendar-client/src/customWidget/colorWidget/: colorlabel.cpp  colorpickerWidget.cpp  colorslider.cpp
calendar-client/src/dataManage/: accountitem.cpp  accountmanager.cpp  accountmanager.h  calendarmanage.cpp  lunarmanager.cpp  lunarmanager.h  schedulecoormanage.cpp  scheduledatamanage.cpp  schedulemanager.cpp
calendar-client/src/dbus/: dbusaccountmanagerrequest.cpp  dbusaccountmanagerrequest.h  dbusaccountrequest.cpp  dbuscalendar_adaptor.cpp  dbuscalendar_adaptor.h  dbushuanglirequest.cpp  doanetworkdbus.cpp  doanetworkdbus.h  exportedinterface.cpp
calendar-client/src/dialog/: dcalendarddialog.cpp  myscheduleview.cpp  schedulectrldlg.cpp  scheduledlg.cpp  scheduletypeeditdlg.cpp  settingdialog.cpp  timejumpdialog.cpp
calendar-client/src/view/: alldayeventview.cpp  cgraphicsscene.cpp  cweekdaygraphicsview.cpp  draginfographicsview.cpp  graphicsview.cpp  monthgraphiview.cpp
calendar-client/src/view/graphicsItem/: calldayscheduleitem.cpp  cfocusitem.cpp  cmonthdayitem.cpp  cmonthscheduleitem.cpp  cmonthschedulenumitem.cpp  cscenebackgrounditem.cpp  cweekdaybackgrounditem.cpp  draginfoitem.cpp  scheduleitem.cpp
calendar-client/src/widget/: calendarmainwindow.cpp  calendarmainwindow.h  cschedulebasewidget.cpp  schedulesearchview.cpp  touchgestureoperation.cpp
calendar-client/src/widget/dayWidget/: dayhuangliview.cpp  daymonthview.cpp  daywindow.cpp
calendar-client/src/widget/monthWidget/: monthdayview.cpp  monthscheduleview.cpp  monthview.cpp  monthweekview.cpp  monthwindow.cpp
calendar-client/src/widget/settingWidget/: settingwidgets.cpp  userloginwidget.cpp
calendar-client/src/widget/sidebarWidget/: sidebarcalendarwidget.cpp  sidebaritemwidget.cpp  sidebartreewidgetitemdelegate.cpp  sidebarview.cpp
calendar-client/src/widget/weekWidget/: weekheadview.cpp  weekview.cpp  weekwindow.cpp
calendar-client/src/widget/yearWidget/: yearscheduleview.cpp  yearview.cpp  yearwindow.cpp  yearwindow.h
calendar-common/src/: commondef.h  compatibledata.cpp  daccount.cpp  dbustimedate.cpp  dcalendargeneralsettings.cpp  dschedule.cpp  dschedulequerypar.cpp  dscheduletype.cpp  dtypecolor.cpp  logger.cpp  logger.h  units.cpp  units.h
calendar-common/src/huangliData/: dbusdatastruct.cpp
calendar-common/src/lunarandfestival/: lunarcalendar.cpp  lunardateinfo.cpp  lunarmanager.cpp  method_interface.cpp
calendar-common/src/pinyin/: pinyinsearch.cpp
calendar-service/: CMakeLists.txt
calendar-service/assets/: resources.qrc  systemd-service-template.service  systemd-timer-template.timer
calendar-service/assets/holiday-cn/: 2026.json
calendar-service/src/: calendarhuangli.cpp  calendarprogramexitcontrol.cpp  csystemdtimercontrol.cpp  csystemdtimercontrol.h  main.cpp
calendar-service/src/alarmManager/: dalarmmanager.cpp  dreminddata.cpp
calendar-service/src/calendarDataManager/: daccountmanagemodule.cpp  daccountmodule.cpp  duploadtaskdata.cpp
calendar-service/src/dbmanager/: daccountmanagerdatabase.cpp  ddatabase.cpp  ddatabasemanagement.cpp  dhuanglidatabase.cpp
calendar-service/src/dbusservice/: daccountmanagerservice.cpp  dhuangliservice.cpp  dservicebase.cpp  dservicemanager.cpp
calendar-service/src/synchronization/: dataencrypt.cpp  dbuscloudsync.cpp  syncfilemanage.cpp  syncoperation.cpp
calendar-service/src/unionIDDav/: ddatasyncbase.cpp  dsyncdatafactory.cpp  dunioniddav.cpp
cmake/: qt-version-macros.cmake  translation-generate.cmake
configs/dconfig/: org.deepin.dde.calendar.client.json
configs/debugconfig/: org.deepin.dde.calendar.json
configs/logconfig/: dde-calendar.json
debian/: changelog  control  control.1  rules
docs/: dbus_API.md
loong64/: linglong.yaml
mips64/: linglong.yaml
schedule-plugin/: CMakeLists.txt
schedule-plugin/src/calendarData/: dscheduledatamanager.cpp
schedule-plugin/src/dbus/: dbusaccountmanagerrequest.cpp  dbusaccountrequest.cpp  dbushuanglirequest.cpp  dbusrequestbase.cpp
schedule-plugin/src/state/: getchangedatastate.cpp  queryschedulestate.cpp  repeatfeedbackstate.cpp  schedulestate.cpp  selectandquerystate.cpp  selectinquirystate.cpp
schedule-plugin/src/task/: cancelscheduletask.cpp  changescheduletask.cpp  createscheduletask.cpp  queryscheduleproxy.cpp  queryscheduletask.cpp  semanticanalysistask.cpp
schedule-plugin/src/widget/: createschedulewidget.cpp  (+1 more)
script/: clear_schedules.sh  download_holidays.py  test_dbus_apis.sh
sw64/: linglong.yaml
tests/dde-calendar-client-test/: CMakeLists.txt
translations/: dde-calendar-service_lo.ts  dde-calendar_lo.ts
translations/desktop/: desktop_lo.ts
